updated HTML portion of website

--- a/index.html
+++ b/index.html
@@ -24,25 +24,30 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
-									is Ethereal</h1>
-									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									is Kairui</h1>
+									<p>I'm a <strong>product designer</strong> who also loves to code. I enjoy working with technologies like <strong>ReactJS</strong>, <strong>Django</strong>, and <strong>Electron</strong> In my spare time, I like taking photos and teaching workshops.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/pic01.jpg" alt="" />
+									<img src="https://i.imgur.com/guwiBYZ.png" alt="" />
 								</div>
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium right" id="first">
-								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+							<section class="panel spotlight medium middle" id="first">
+								<div class="content span-5">
+									<h2 class="major">Education</h2>
+									<h4>UC Berkeley 2019 | Computer Science</h4>
+									<ul class="alt">
+										<li>ASUC Office of the CTO</li>
+										<li>UAVs @ Berkeley</li>
+										<li>Berkeley Legends</li>
+									</ul>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="https://i.imgur.com/mYC0WjI.png" alt="" />
 								</div>
 							</section>
 
@@ -102,7 +107,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Want to get in touch about a cool project idea you have? Or maybe you just want to do a photoshoot with me? Shoot me a message here!</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
@@ -126,11 +131,11 @@
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon fa-twitter"><a href="#">@KairuiZeng</a></li>
-											<li class="icon fa-facebook"><a href="#">facebook.com/KairuiZeng</a></li>
+											<li class="icon fa-twitter"><a href="https://twitter.com/KairuiZeng">@KairuiZeng</a></li>
+											<li class="icon fa-facebook"><a href="https://facebook.com/KairuiZeng">facebook.com/KairuiZeng</a></li>
 											<li class="icon fa-snapchat-ghost"><a href="#">@majority</a></li>
-											<li class="icon fa-instagram"><a href="#">@Lunoxus</a></li>
-											<li class="icon fa-medium"><a href="#">medium.com/kairui</a></li>
+											<li class="icon fa-instagram"><a href="https://instagram.com/Lunoxus">@Lunoxus</a></li>
+											<li class="icon fa-medium"><a href="https://medium.com/@kairui">medium.com/kairui</a></li>
 										</ul>
 									</div>
 								</div>
